<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup"
    android:background="#DCDCDC"
    >


    <ImageView
        android:id="@+id/icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:srcCompat="@drawable/img_1"
        android:clickable="true"
        android:onClick="inicio"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        />


    <ImageView
        android:id="@+id/img1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/icon2"
        android:layout_alignParentEnd="true"

        />
    <TextView
        android:id="@+id/inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_acc"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="20dp"
        />


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_margin="10dp"
        android:layout_below="@+id/inicio"
        android:imeOptions="actionDone"
        android:singleLine="true"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:layout_margin="10dp"
        android:layout_below="@+id/username"
        android:paddingEnd="50dp"
        android:imeOptions="actionDone"
        />
    <CheckBox
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_alignParentEnd="true"
        />
    <EditText
        android:id="@+id/password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/conf_pass"
        android:layout_margin="10dp"
        android:layout_below="@+id/password"
        android:imeOptions="actionDone"
        />
    <CheckBox
        android:id="@+id/check2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:id="@+id/criar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password2"
        android:text="@string/have_acc"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:layout_centerHorizontal="true"
        android:onClick="login"
        />
    <Button
        android:id="@+id/btnlog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/criar"
        android:layout_margin="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/create_acc">

    </Button>

</RelativeLayout>